--- a/index.html
+++ b/index.html
@@ -32,6 +32,34 @@
 
         <p class="answer" id="r1"></p>
       </li>
+      <li>
+        <p>
+          Дана строка, состоящая из символов, например, 'abcde'. Проверьте, что
+          первым символом этой строки является буква 'a'. Если это так -
+          выведите 'да', в противном случае выведите 'нет'.
+        </p>
+        <div class="input-block">
+          <input id="t2" type="text" />
+          <button onclick="checkResult2()">Проверить</button>
+        </div>
+        <code id="code2"></code>
+
+        <p class="answer" id="r2"></p>
+      </li>
+      <li>
+        <p>
+          Дано число, например, 12345. Проверьте, что первым символом этого
+          числа является цифра 1, 2 или 3. Если это так - выведите 'да', в
+          противном случае выведите 'нет'.
+        </p>
+        <div class="input-block">
+          <input id="t3" type="number" />
+          <button onclick="checkResult3()">Проверить</button>
+        </div>
+        <code id="code3"></code>
+
+        <p class="answer" id="r3"></p>
+      </li>
     </ol>
   </body>
 </html>
